# htb-ai-library

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat  readme.md  requirements.txt
docs/api/: index.rst
src/htb_ai_library/: __init__.py  core.py  data.py  metrics.py  models.py  training.py  viz.py
src/htb_ai_library/data/: __init__.py  mnist.py  sms.py  transforms.py
src/htb_ai_library/evaluation/: __init__.py  metrics.py
src/htb_ai_library/models/: __init__.py  cifar.py  mnist.py
src/htb_ai_library/training/: __init__.py  loops.py
src/htb_ai_library/utils/: __init__.py  palette.py  reproducibility.py  serialization.py
src/htb_ai_library/visualization/: __init__.py  attacks.py  styles.py
tests/: conftest.py  test_core.py  test_data.py  test_metrics.py  test_models.py  test_training.py  test_viz.py
