[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "htb-ai-library"
version = "0.2.0"
description = "Common library for HTB AI Evasion module"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PandaSt0rm/htb-ai-library"

[tool.setuptools.packages.find]
where = ["src"]
